@@ -414,6 +414,12 @@ regular expression matching strings.
       <i>non-</i>matching lines only. <b>Since Ant 1.7</b></td>
     <td vAlign=top align="center">No</td>
   </tr>
+  <tr>
+    <td vAlign=top>casesensitive</td>
+    <td vAlign=top align="center">Perform a case sensitive
+      match. Default is true. <b>Since Ant 1.8.2</b></td>
+    <td vAlign=top align="center">No</td>
+  </tr>
 </table>
 
 See <a href="regexp.html">Regexp Type</a> for the description of the nested element regexp and of
